add width fixed for not break table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,19 @@
     <%= stylesheet_pack_tag 'application' %>
 
     <style>
+
+    * {
+        outline: none;
+    }
+
+    .main {
+        width: 1850px;
+        margin: 0 auto;
+    }
+
+    .overflow{
+        overflow: auto;
+    }
     
       ul {
 
