--- a/app/views/table/index.html.erb
+++ b/app/views/table/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row main overflow">
     <ul>
     <% for row in 1..10 %> 
     <% for col in 1..18 %>
